Fixed breadcrumb separator spacing issue, closes #48

--- a/templates/polish/css/breadcrumb.css
+++ b/templates/polish/css/breadcrumb.css
@@ -47,5 +47,6 @@
 	margin: 0 0.75em;
 	overflow: hidden;
 	position: absolute;
+	right: -2.25em;	
 	text-decoration: none;
 }
